# rust_project_reader

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  print.rs
