[package]
name = "rust_project_reader"
description = "A simple program that reads all the fiels of a rust project and copies them to the clipboard. This is useful for using with chatgpt/gpt-4."
repository = "https://github.com/RobertasJ/rust_project_reader"
license = "GPL-3.0"

version = "0.1.3"
authors = ["Robertas <robertasj8@gmail.com>"]
edition = "2021"
rust-version = "1.68.0"

[[bin]]
name = "cargo-rust_project_reader"
path = "src/main.rs"

[dependencies]
clipboard = "0.5.0"
colored = "2.0.0"
walkdir = "2.3.3"
